Signed-off-by: Christina Standl <christina.standl@student.uibk.ac.at>

--- a/Uebung03082017.md
+++ b/Uebung03082017.md
@@ -4,6 +4,7 @@
 * Zu beachten: Endung=.md, Datentyp=all types
 * Edit> Options >Name und emailadresse eingeben, Default File Content encoding auf utf-8 umstellen
 
+
 2. Text und Bild in die Datei einfügen
 *Ach wie schön!
 ![Karwendel](Karwendel_Sonnenuntergang)
@@ -17,5 +18,8 @@ Quelle:[Karwendel](http://karwendelhaus.com/wp-content/uploads/2015/09/Karwendel
 
 5. Mit State Changes und Sign Off Änderungen bestätigen
 
-6. Mit commit und push Änderungen durchführen und mit Anmerkungen versehen
+6. Auf github ein repository erstellen Uebung1
+*Remote > Add > Name und Location angeben
+
+7. Mit commit und push Änderungen durchführen und mit Anmerkungen versehen
 
