Signed-off-by: Christina Standl <christina.standl@student.uibk.ac.at>

--- a/Uebung03082017.md
+++ b/Uebung03082017.md
@@ -5,9 +5,10 @@
 * Edit> Options >Name und emailadresse eingeben, Default File Content encoding auf utf-8 umstellen
 
 
-2. Text und Bild in die Datei einfügen
-*Ach wie schön!
-![Karwendel](Karwendel_Sonnenuntergang)
+2. Text und Bild in die Datei einfügen:
+Ach wie schön!
+
+![Karwendel](Karwendel_Sonnenuntergang.jpg)
 Quelle:[Karwendel](http://karwendelhaus.com/wp-content/uploads/2015/09/Karwendel_Sonnenuntergang.jpg)
 
 3. Git gui starten
@@ -22,4 +23,12 @@ Quelle:[Karwendel](http://karwendelhaus.com/wp-content/uploads/2015/09/Karwendel
 *Remote > Add > Name und Location angeben
 
 7. Mit commit und push Änderungen durchführen und mit Anmerkungen versehen
+*push > source branch = Master ; remote = github, Benutzername und Passwort eingeben
 
+8. markdown  
+chrome markdown preview runterladen(häkchen setzen bei Zugriff auf URL-Datei zulassen)
+
+9.speichern und .md file in ein leeres chrome-fenster ziehen
+
+# und so soll das aussehen: 
+![Screenshot](Unbenannt.png)
